update img panel Admin

--- a/frontend/panel/D-Users/index.html
+++ b/frontend/panel/D-Users/index.html
@@ -60,8 +60,7 @@
                             <div class="home-profile">
                                 <div class="home-profile-image">
                                     <a href="#">
-                                        <img src="img/profile.png" alt="">
-                                    </a>
+                                        <img src="img/profile.jpg" alt="">
                                 </div>
                                 <div class="home-profile-name">
                                     <a href="#" id="admin-name"></a>
